# audep

./: .gitignore  README.md  audep-cli.spec  pyproject.toml
src/audep/: __init__.py  action.py  cli.py  config.py  executor.py  file.py  parser.py  template.py  utils.py  vm.py
tests/: test_audeplib.py
